[project]
name = "meteo-scenarios"
version = "0.1.0"
description = "Scenario reduction & clustering for metocean fields (WASP routing/design)."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Charles Dhainaut" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "cfgrib",    
  "scikit-learn",
  "matplotlib",
  "cartopy",
]
[project.optional-dependencies]
dtw = ["fastdtw"]
dev = ["pytest", "ruff", "pre-commit"]

[project.scripts]
meteo-aggregate = "meteo_scenarios.cli.aggregate:main"
meteo-reduce    = "meteo_scenarios.cli.reduce:main"
meteo-plot-map  = "meteo_scenarios.cli.plot_map:main"
meteo-probe     = "meteo_scenarios.cli.probe:main"
